# PyroPy

./: .gitignore  404.html  README.md  afdrs_downloads.py  compare_vesta.ipynb  doc_gen.py  firebehaviour.ipynb  firebehaviour_cli.py  index.html  mkdocs.yml  objects.inv  pyropy.ipynb  pyropy_cli.py  read_IWF.py  requirements.txt  sandbox.py  search.html  setup.cfg  sitemap.xml  temp.xlsm  test  test.csv
.venv_dev/: pyvenv.cfg
.venv_dev/Scripts/: activate  activate.bat  rst2html.py  rst2html4.py  rst2html5.py  rst2latex.py  rst2man.py  rst2odt.py  rst2odt_prepstyles.py  rst2pseudoxml.py  rst2s5.py  rst2xetex.py  rst2xml.py  rstpep2html.py
.venv_test/Scripts/: activate  activate.bat
_index/: index.html
docs/: _index.md  index.md  modules.md  spreadmodels.md
docs/examples/: compare_mc.ipynb
docs/stylesheets/: extra.css
examples/compare_mc/: index.html
license/: index.html
modules/: index.html
pyropy_helpers/: setup.cfg
pyropy_module/: setup.cfg
pyropy_spreadmodels/: setup.cfg
search/: search_index.json
spreadmodels/: index.html
src/firebehaviour/: firebehaviour.py  helpers.py  spreadmodels.py  weather_data.py
src/pyropy/: firebehaviour.py  helpers.py  spreadmodels.py  test.py  weatherdata.py
stylesheets/: extra.css
tests/: test_firebehaviour.py  test_helpers.py  test_spreadmodels.py  test_weather_data.py  test_weatherdata.py
tests/.data/: FireBehaviourCalcs_Ref.xlsm  FireBehaviourCalcs_Test.xlsm  FireBehaviourCalcs_Test_out.xlsm  amicus_test.apx  amicus_vesta.csv  amicus_vesta2.csv  amicus_vesta3.csv  lach_lamond_fbcalc.xlsm  ms_dos.csv  (+4 more)
(+1 files in other folders)
