[metadata]
name = firebehaviour
version = 0.1.0
author = Geoffysicist
author_email = geoff.goldrick@rfs.nsw.gov.au
description = Analysis of fire spread and intensity
long_description = file: README.md
long_description_content_type =text/markdown
url = https://github.com/Geoffysicist/firebehaviour
license = GPL-3.0-or-later
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src