[metadata]
name = PyroPy module
version = 2.0.0a1
author = Geoffysicist
author_email = geoff.goldrick@rfs.nsw.gov.au
description = Analysis of fire behaviour module
long_description = file: README.md
long_description_content_type =text/markdown
url = https://github.com/Geoffysicist/PyroPy
project_urls = 
    Documentation = https://geoffysicist.github.io/PyroPy/
license = GPL-3.0-or-later
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3

[options]
package_dir =
    = pyropy
packages = find:
python_requires = >=3.10
install_requires=
    pandas

[options.packages.find]
where = pyropy